# spoken-language-identification

./: .gitignore  README.md  TRAIN_MODEL_README.md  baseline tuning conclusion.txt  bert_model_report.md  bert_model_report_after_tuning.md  mitigation_findings_report.md  pyproject.toml  requirements.txt  train_model.py  train_model_mac_m1.py
indic-SLID-mac/SLID_facebook-mms-300m_1e-05_20260227_165620/: all_results.json  eval_results.json  predict_results.json  train_results.json  trainer_state.json
indic-SLID-mac/SLID_facebook-wav2vec2-xls-r-300m_1e-05_20260228_200831/: all_results.json  eval_results.json  predict_results.json  train_results.json  trainer_state.json
indic-SLID-mac/SLID_utter-project-mHuBERT-147_1e-05_20260301_094826/: all_results.json  eval_results.json  predict_results.json  (+2 more)
overall-report/: custom.bib  eacl2023.sty  eacl2023.tex
reports/: artifacts_used.md  dan_vs_all_mitigation.md  dann_mitigation_findings_report.md  mitigation_1_vs_2_comparison_report.md  mitigation_1_vs_2_metrics_table.csv  mitigation_1_vs_2_vs_3a_comparison_report.md  mitigation_1_vs_2_vs_3a_vs_3b_comparison_report.md  mitigation_1_vs_dann_comparison_report.md  mitigation_3a_3b_strategy_report.md  mitigation_4_tsne_change_report.md  mitigation_4_vs_previous_runs_comparison_report.md  mitigation_change_log.md  mitigation_findings_report-2.md  mitigation_findings_report-3a.md  mitigation_findings_report-3b.md  mitigation_findings_report-4.md  task2-checklist.md  task3_analysis.md  tuning_vs_mitigation_report.md
scripts/: export_tsne_from_run.py  task3_generate_artifacts.py
(+120 files in other folders)
